--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^3.8.3",
     "@material-ui/icons": "^3.0.2",
     "@types/classnames": "^2.2.7",
+    "@types/lodash": "^4.14.119",
     "@types/react-router-dom": "^4.3.1",
     "autoprefixer": "7.1.6",
     "axios": "^0.18.0",
