--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/classnames": "^2.2.7",
     "@types/lodash": "^4.14.119",
     "@types/react-router-dom": "^4.3.1",
+    "@types/recompose": "^0.30.2",
     "autoprefixer": "7.1.6",
     "axios": "^0.18.0",
     "babel-jest": "20.0.3",
@@ -50,6 +51,7 @@
     "tslint-react": "^3.2.0",
     "uglifyjs-webpack-plugin": "1.2.5",
     "url-loader": "0.6.2",
+    "utility-types": "^3.4.1",
     "webpack": "3.8.1",
     "webpack-dev-server": "2.11.3",
     "webpack-manifest-plugin": "1.3.2",
