--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jest": "20.0.4",
     "mobx": "^5.8.0",
     "mobx-react": "^5.4.3",
+    "mobx-react-devtools": "^6.0.3",
     "moment": "^2.23.0",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
